[tool.poetry]
name = "python - sudoku"
version = "0.1.0"
description = ""
authors = ["Jacqueline Xu <xujacque@gmail.com>"]
readme = "README.md"
packages = [{include = "python _ sudoku"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
